js/js.translator/testData/incremental/invalidation/moveFilesBetweenModules/lib1/l12.kt
inline fun bar(b: Int) = b - 3
